--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,13 @@
 <resources>
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorAccent">#FCFCFE</color>
+    <color name="pink">#F44336</color>
+
+    <color name="black">#000000</color>
+    <color name="grey">#E4E4E4</color>
+    <color name="lightGreen">#02C39A</color>
+
+    <color name="UIblue">#39374D</color>
+    <color name="blue">#4337B5</color>
 </resources>
