--- a/app/src/main/res/drawable/bg_input.xml
+++ b/app/src/main/res/drawable/bg_input.xml
@@ -2,12 +2,12 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <solid
-        android:color="#C8C8C8" />
+        android:color="#00C8C8C8" />
 
     <stroke
         android:width="1dp"
-        android:color="#FFF" />
+        android:color="#000000" />
 
     <corners
-        android:radius="100dp" />
+        android:radius="10dp" />
 </shape>
