--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -82,7 +82,7 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="36dp"
         android:background="@drawable/bg_input"
-        android:hint="Username"
+        android:hint="Enter Email"
         android:inputType="text"
         android:paddingLeft="54dp"
         android:textColor="#000000"
