--- a/app/src/main/res/layout/activity_police_form.xml
+++ b/app/src/main/res/layout/activity_police_form.xml
@@ -80,7 +80,7 @@
         android:layout_marginTop="28dp"
         android:background="@drawable/bg_input"
         android:hint="Enter Badge Number"
-        android:inputType="text"
+        android:inputType="number"
         android:paddingLeft="54dp"
         android:textColor="#000000"
         android:textColorHint="#000000"
@@ -114,7 +114,7 @@
         tools:ignore="VectorDrawableCompat" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/policeBtnXml"
         android:layout_width="238dp"
         android:layout_height="60dp"
         android:layout_marginTop="24dp"
