--- a/app/src/main/res/layout/activity_vehicle_owner_form.xml
+++ b/app/src/main/res/layout/activity_vehicle_owner_form.xml
@@ -62,11 +62,12 @@
         android:id="@+id/button2"
         android:layout_width="238dp"
         android:layout_height="60dp"
+        android:layout_marginTop="12dp"
         android:text="Complete Registration"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.907"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="655dp" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPostalAddress" />
 
     <EditText
         android:id="@+id/editTextNumber"
@@ -76,7 +77,7 @@
         android:background="@drawable/bg_input"
         android:ems="10"
         android:hint="Enter Vehicle Registration Number"
-        android:inputType="number"
+        android:inputType="text"
         android:paddingLeft="54dp"
         android:textColor="#000000"
         android:textColorHint="#000000"
@@ -94,7 +95,141 @@
         app:layout_constraintStart_toStartOf="@+id/editTextNumber"
         app:layout_constraintTop_toTopOf="@+id/editTextNumber"
         app:layout_constraintVertical_bias="0.521"
-        app:srcCompat="@drawable/ic_baseline_directions_car_24" />
+        app:srcCompat="@drawable/ic_baseline_directions_car_24"
+        tools:ignore="VectorDrawableCompat" />
 
+    <EditText
+        android:id="@+id/editTextNumber2"
+        android:layout_width="359dp"
+        android:layout_height="45dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/bg_input"
+        android:ems="10"
+        android:hint="Enter Driver's Registration Number"
+        android:inputType="number"
+        android:paddingLeft="54dp"
+        android:textColor="#000000"
+        android:textColorHint="#000000"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />
+
+    <ImageView
+        android:id="@+id/imageView14"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="@+id/editTextNumber2"
+        app:layout_constraintEnd_toEndOf="@+id/editTextNumber2"
+        app:layout_constraintHorizontal_bias="0.05"
+        app:layout_constraintStart_toStartOf="@+id/editTextNumber2"
+        app:layout_constraintTop_toTopOf="@+id/editTextNumber2"
+        app:layout_constraintVertical_bias="0.476"
+        app:srcCompat="@drawable/ic_baseline_directions_car_24"
+        tools:ignore="VectorDrawableCompat" />
+
+    <EditText
+        android:id="@+id/editTextTextPersonName"
+        android:layout_width="359dp"
+        android:layout_height="45dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/bg_input"
+        android:ems="10"
+        android:hint="Enter Insurance Name"
+        android:inputType="text"
+        android:paddingLeft="54dp"
+        android:textColor="#000000"
+        android:textColorHint="#000000"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextNumber2" />
+
+    <ImageView
+        android:id="@+id/imageView15"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="@+id/editTextTextPersonName"
+        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName"
+        app:layout_constraintHorizontal_bias="0.056"
+        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName"
+        app:layout_constraintTop_toTopOf="@+id/editTextTextPersonName"
+        app:layout_constraintVertical_bias="0.38"
+        app:srcCompat="@drawable/ic_baseline_apartment_24" />
+
+    <EditText
+        android:id="@+id/editTextDate"
+        android:layout_width="361dp"
+        android:layout_height="39dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/bg_input"
+        android:ems="10"
+        android:hint="Enter Insurance Expiry Date"
+        android:inputType="date"
+        android:paddingLeft="54dp"
+        android:textColor="#000000"
+        android:textColorHint="#000000"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />
+
+    <ImageView
+        android:id="@+id/imageView16"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="@+id/editTextDate"
+        app:layout_constraintEnd_toEndOf="@+id/editTextDate"
+        app:layout_constraintHorizontal_bias="0.056"
+        app:layout_constraintStart_toStartOf="@+id/editTextDate"
+        app:layout_constraintTop_toTopOf="@+id/editTextDate"
+        app:layout_constraintVertical_bias="0.533"
+        app:srcCompat="@drawable/ic_baseline_date_range_24" />
+
+    <EditText
+        android:id="@+id/editTextDate2"
+        android:layout_width="361dp"
+        android:layout_height="39dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/bg_input"
+        android:ems="10"
+        android:hint="NCT Valid Date"
+        android:inputType="date"
+        android:paddingLeft="54dp"
+        android:textColor="#000000"
+        android:textColorHint="#000000"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextDate" />
+
+    <EditText
+        android:id="@+id/editTextDate3"
+        android:layout_width="361dp"
+        android:layout_height="39dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/bg_input"
+        android:ems="10"
+        android:hint="Road tax Valid till"
+        android:inputType="date"
+        android:paddingLeft="54dp"
+        android:textColor="#000000"
+        android:textColorHint="#000000"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.48"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextDate2" />
+
+    <EditText
+        android:id="@+id/editTextTextPostalAddress"
+        android:layout_width="365dp"
+        android:layout_height="86dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/bg_input"
+        android:ems="10"
+        android:hint="Enter Postal Address"
+        android:inputType="textPostalAddress"
+        android:paddingLeft="54dp"
+        android:textColor="#000000"
+        android:textColorHint="#000000"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextDate3" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
