--- a/app/src/main/res/layout/activity_text_recognizer.xml
+++ b/app/src/main/res/layout/activity_text_recognizer.xml
@@ -1,48 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".TextRecognizer">
+    tools:context=".TextRecognizer"
+    android:id="@+id/drawerLayout">
 
-    <ImageButton
-        android:id="@+id/snapBtn"
-        android:layout_width="64dp"
-        android:layout_height="57dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="57dp"
-        android:layout_marginBottom="22dp"
-        app:srcCompat="@drawable/ic_icon_metro_camera"
-        tools:ignore="VectorDrawableCompat" />
-
-    <ImageButton
-        android:id="@+id/detectBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/snapBtn"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="0dp"
-        android:layout_marginEnd="67dp"
-        app:srcCompat="@drawable/ic_icon_open_magnifying_glass"
-        tools:ignore="VectorDrawableCompat" />
-
-    <ImageView
-        android:id="@+id/imageView"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="360dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        app:srcCompat="@android:color/background_light" />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/txtView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="104dp" />
+        <include
+            layout="@layout/main_toolbar"/>
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Scan Reg Number"
+            android:layout_gravity="center"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:textColor="#636363"/>
 
-</RelativeLayout>
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="match_parent"
+            android:layout_height="360dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="10dp"
+            app:srcCompat="@android:color/background_light" />
+
+        <TextView
+            android:id="@+id/txtView"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="90dp" />
+
+        <ImageButton
+            android:id="@+id/snapBtn"
+            android:layout_width="200sp"
+            android:layout_height="50sp"
+            android:layout_marginStart="100sp"
+            android:layout_marginTop="-50dp"
+            app:srcCompat="@drawable/ic_icon_metro_camera"
+            tools:ignore="VectorDrawableCompat" />
+
+        <Button
+            android:id="@+id/detectBtn"
+            android:layout_width="200sp"
+            android:layout_height="50sp"
+            android:layout_marginStart="100sp"
+            android:layout_marginRight="40dp"
+            android:text="Detect Reg Number" />
+
+    </LinearLayout>
+
+    <RelativeLayout
+        android:layout_width="300dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:background="@android:color/white">
+
+        <include
+            layout="@layout/main_nav_drawer"/>
+    </RelativeLayout>
+    
+</androidx.drawerlayout.widget.DrawerLayout>
