--- a/app/src/main/res/drawable/book.xml
+++ b/app/src/main/res/drawable/book.xml
@@ -3,8 +3,8 @@
     android:height="32dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
-    android:tint="?attr/colorControlNormal">
+    android:tint="@color/colorAccent">
   <path
-      android:fillColor="@android:color/white"
+      android:fillColor="@color/colorAccent"
       android:pathData="M18,2H6c-1.1,0 -2,0.9 -2,2v16c0,1.1 0.9,2 2,2h12c1.1,0 2,-0.9 2,-2V4c0,-1.1 -0.9,-2 -2,-2zM6,4h5v8l-2.5,-1.5L6,12V4z"/>
 </vector>
