--- a/app/src/main/res/layout/activity_set_new_password.xml
+++ b/app/src/main/res/layout/activity_set_new_password.xml
@@ -72,35 +72,35 @@
         app:layout_constraintStart_toStartOf="@+id/forPass"
         app:layout_constraintTop_toTopOf="@+id/forPass"
         app:srcCompat="@drawable/ic_baseline_lock_24"
-        tools:ignore="VectorDrawableCompat" />
+        tools:ignore="DuplicateIds,VectorDrawableCompat" />
 
-    <EditText
-        android:id="@+id/con"
-        android:layout_width="316dp"
-        android:layout_height="46dp"
-        android:layout_marginTop="28dp"
-        android:background="@drawable/bg_input"
-        android:hint="Enter Email"
-        android:inputType="textEmailAddress"
-        android:paddingLeft="54dp"
-        android:textColor="#000"
-        android:textColorHint="#000"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+<!--    <EditText-->
+<!--        android:id="@+id/con"-->
+<!--        android:layout_width="316dp"-->
+<!--        android:layout_height="46dp"-->
+<!--        android:layout_marginTop="28dp"-->
+<!--        android:background="@drawable/bg_input"-->
+<!--        android:hint="Enter Email"-->
+<!--        android:inputType="textEmailAddress"-->
+<!--        android:paddingLeft="54dp"-->
+<!--        android:textColor="#000"-->
+<!--        android:textColorHint="#000"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintHorizontal_bias="0.494"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/textView4" />-->
 
-    <ImageView
-        android:id="@+id/imageView7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="@+id/forPass"
-        app:layout_constraintEnd_toEndOf="@+id/forPass"
-        app:layout_constraintHorizontal_bias="0.071"
-        app:layout_constraintStart_toStartOf="@+id/forPass"
-        app:layout_constraintTop_toTopOf="@+id/forPass"
-        app:srcCompat="@drawable/ic_baseline_lock_24"
-        tools:ignore="VectorDrawableCompat" />
+<!--    <ImageView-->
+<!--        android:id="@+id/imageView7"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        app:layout_constraintBottom_toBottomOf="@+id/forPass"-->
+<!--        app:layout_constraintEnd_toEndOf="@+id/forPass"-->
+<!--        app:layout_constraintHorizontal_bias="0.071"-->
+<!--        app:layout_constraintStart_toStartOf="@+id/forPass"-->
+<!--        app:layout_constraintTop_toTopOf="@+id/forPass"-->
+<!--        app:srcCompat="@drawable/ic_baseline_lock_24"-->
+<!--        tools:ignore="DuplicateIds,VectorDrawableCompat" />-->
 
     <Button
         android:id="@+id/button"
