--- a/app/src/main/res/layout/activity_police_form.xml
+++ b/app/src/main/res/layout/activity_police_form.xml
@@ -73,11 +73,22 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
+    <Button
+        android:id="@+id/currentLoc"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Get my current location"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.802"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/policeLocation" />
+
     <EditText
         android:id="@+id/badgeNum"
         android:layout_width="343dp"
         android:layout_height="54dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="12dp"
         android:background="@drawable/bg_input"
         android:hint="Enter Badge Number"
         android:inputType="number"
@@ -87,7 +98,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.514"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/policeLocation" />
+        app:layout_constraintTop_toBottomOf="@+id/currentLoc" />
 
     <ImageView
         android:id="@+id/imageView11"
@@ -117,7 +128,7 @@
         android:id="@+id/policeBtnXml"
         android:layout_width="238dp"
         android:layout_height="60dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="12dp"
         android:text="Complete Registration"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.809"
