--- a/app/src/main/res/layout/activity_text_recognizer.xml
+++ b/app/src/main/res/layout/activity_text_recognizer.xml
@@ -20,6 +20,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
             android:text="Scan Reg Number"
             android:layout_gravity="center"
             android:textSize="20sp"
@@ -28,39 +29,67 @@
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="match_parent"
-            android:layout_height="360dp"
+            android:layout_width="320dp"
+            android:layout_height="300dp"
+            android:layout_gravity="center"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_marginStart="0dp"
             android:layout_marginTop="10dp"
-            app:srcCompat="@android:color/background_light" />
+            android:background="@drawable/ic_police_car" />
 
         <TextView
             android:id="@+id/txtView"
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:textColor="@color/colorTextPrimary"
-            android:layout_marginBottom="90dp" />
+            android:layout_width="320dp"
+            android:layout_height="145dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_gravity="center"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginBottom="90dp"
+            android:textColor="@color/colorTextPrimary" />
 
-        <ImageButton
-            android:id="@+id/snapBtn"
-            android:layout_width="200sp"
-            android:layout_height="50sp"
-            android:layout_marginStart="100sp"
-            android:layout_marginTop="-50dp"
-            app:srcCompat="@drawable/ic_icon_metro_camera"
-            tools:ignore="VectorDrawableCompat" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:padding="5dp"
+            android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/detectBtn"
-            android:layout_width="200sp"
-            android:layout_height="50sp"
-            android:layout_marginStart="100sp"
-            android:layout_marginRight="40dp"
-            android:text="Detect Reg Number" />
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:padding="5dp"
+                android:orientation="horizontal">
+
+                <ImageButton
+                    android:id="@+id/snapBtn"
+                    android:layout_width="70sp"
+                    android:layout_height="50sp"
+                    app:srcCompat="@drawable/ic_camera"
+                    tools:ignore="VectorDrawableCompat" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:padding="5dp"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/detectBtn"
+                    android:layout_width="200sp"
+                    android:layout_height="50sp"
+                    android:text="Detect Reg Number" />
+            </LinearLayout>
+
+        </LinearLayout>
+
+
     </LinearLayout>
 
     <RelativeLayout
